# fselect

./: LICENSE  README.md  pyproject.toml
fselect/rsr/: rsr.py  rsr_example.py
fselect/util/: data.py  utils.py
