#  https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fselect"
version = "0.0.1"
description = "TODO."
authors = ["Markus Steindl <markus.steindl@risc-software.at>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "fselect" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
scikit-learn = "^1.0"
pandas = "^1.0"

[tool.pytest.ini_options]
testpaths = [
	"test",
]
# ignore any of these paths
norecursedirs = []
